# openapi-codegen-show-issues

./: .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  LICENSE  README.md  example.tsp  manual_pydantic_broken_string.py  manual_pydantic_confused_values.py  model_codegen.py  model_codegen_broken_string.py  model_codegen_condused_values.py  model_pydantic_manual.py  package-lock.json  package.json  pyproject.toml  run_codegen.py  test_examples.py  tspconfig.yaml
.openapi-generator/: FILES
datamodel_codegen/: broken_string.py  condused_values.py  confused_values.py  ratings.py
example/: __init__.py  api_client.py  api_response.py  configuration.py  rest.py
example/api/: __init__.py  default_api.py
example/models/: __init__.py  pass_me.py  pass_me_confused_values.py  pass_me_mangled_string.py  pass_me_mangled_string_any.py  pass_me_mangled_string_one.py  pass_me_nice_values.py  pass_me_value.py
oapi_code_fixup/broken_string/: __init__.py  api_client.py  configuration.py  rest.py
oapi_code_fixup/broken_string/api/: __init__.py  default_api.py
oapi_code_fixup/broken_string/models/: __init__.py  pass_string.py  pass_string_mangled_string_any.py  pass_string_mangled_string_one.py
oapi_code_fixup/confused_values/: __init__.py  api_client.py  configuration.py  rest.py
oapi_code_fixup/confused_values/api/: __init__.py  default_api.py
oapi_code_fixup/confused_values/models/: __init__.py  more_values.py  more_values_refext.py  pass_me.py  pass_me_confused_values.py  pass_me_nice_values.py  values.py
oapi_code_fixup/ratings/: __init__.py  api_client.py  exceptions.py  rest.py
oapi_code_fixup/ratings/api/: __init__.py  default_api.py
oapi_code_fixup/ratings/models/: __init__.py  patch_rating_number.py  ratings_update_request.py
oapi_codegen/broken_string/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
oapi_codegen/broken_string/api/: __init__.py  default_api.py
oapi_codegen/broken_string/models/: __init__.py  pass_string.py  pass_string_mangled_string_any.py  pass_string_mangled_string_one.py
oapi_codegen/confused_values/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
oapi_codegen/confused_values/api/: __init__.py  default_api.py
oapi_codegen/confused_values/models/: __init__.py  more_values.py  more_values_refext.py  pass_me.py  pass_me_confused_values.py  pass_me_nice_values.py  values.py
oapi_codegen/ratings/: __init__.py  api_client.py  configuration.py  rest.py
oapi_codegen/ratings/api/: __init__.py  default_api.py
oapi_codegen/ratings/models/: __init__.py  named_rating.py  ratings_update_request.py
oapi_codegen_broken_string/: __init__.py  api_client.py  configuration.py  rest.py
oapi_codegen_broken_string/api/: __init__.py  default_api.py
oapi_codegen_broken_string/models/: __init__.py  pass_me.py  pass_me_confused_values.py  pass_me_nice_values.py  pass_string.py
oapi_codegen_condused_values/: __init__.py  api_client.py  configuration.py  rest.py
oapi_codegen_condused_values/api/: __init__.py  default_api.py
oapi_codegen_condused_values/models/: __init__.py  pass_string.py
openapi/: openapi.ConfusedValues.yaml  openapi.broken_string.yaml  openapi.ratings.yaml  openapi.yaml
raw_pydantic/: broken_string.py  confused_values.py
rule-tests/: correct-imports-test.yml
rule-tests/__snapshots__/: correct-imports-snapshot.yml
rules/: correct-imports.yml
specs/: example.tsp  main.tsp  nullable-input-type.tsp  string_types.tsp
test/: test_confused_string.py
